force-app/main/default/objects/Event__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>