force-app/main/default/objects/Event__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <description>If Location Verified is True Then Event Location is also verified</description>
    <formula>Location__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>