force-app/main/default/objects/Event__c/validationRules/End_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Rule</fullName>
    <active>true</active>
    <description>End Date/Time must be at-least 1 day ahead of Start Date/Time</description>
    <errorConditionFormula>End_Date_Time__c &lt;  Start_Date_Time__c + 1</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>End Date/Time must be at-least 1 day ahead of Start Date/Time</errorMessage>
</ValidationRule>