force-app/main/default/objects/Event__c/validationRules/Location_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Selection</fullName>
    <active>true</active>
    <description>If Event Type field value is In-Person then user must select Location on Event Record.</description>
    <errorConditionFormula>AND(ISPICKVAL(Event__c , &apos;In-Person&apos;) ,ISBLANK( Location__c ))</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>If Event Type field value is In-Person then you must select Location</errorMessage>
</ValidationRule>