force-app/main/default/objects/Event__c/validationRules/Recurring_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Check</fullName>
    <active>true</active>
    <description>If Recurring? checkbox is checked then user must need to fill Frequency field &amp; If checkbox is unchecked then User cannot select Frequency field.</description>
    <errorConditionFormula>AND(Recurring__c, ISPICKVAL(Frequency__c ,&apos;&apos;) )</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>You Must Fill The Frequency Field.</errorMessage>
</ValidationRule>