force-app/main/default/objects/Event__c/validationRules/Recurring_Unchecked.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Unchecked</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( Recurring__c ) ,  NOT( ISPICKVAL( Frequency__c ,&apos;&apos; ) ) )</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>You Can Not Select Frequency Field Because Recurring Is Unchecked.</errorMessage>
</ValidationRule>